--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,14 @@ $primary: #050038;
 $colorWhite: #FFFFFF;
 $colorBlue: #4262FF;
 
+%titleSection {
+    font-size: 48px;
+    letter-spacing: 1px;
+    line-height: 56px;
+    font-weight: 400;
+    color: $primary;
+}
+
 $tablet: 1024px;
 $mobileL: 768px;
 $mobileM: 580px;
@@ -14,7 +22,7 @@ $mobileXS: 320px;
 }
 
 .container {
-    max-width: 1120px;
+    max-width: 1140px;
     margin: 0 auto;
 }
 
@@ -173,12 +181,11 @@ header {
         align-items: flex-start;
         gap: 81px;
         margin-top: 83px;
+        margin-bottom: 120px;
 
         .header__left {
             h1 {
-                font-weight: 400;
-                font-size: 48px;
-                letter-spacing: 1px;
+                @extend %titleSection;
                 margin-top: 0;
                 margin-bottom: 19px;
             }
@@ -189,6 +196,9 @@ header {
                 font-size: 18px;
                 line-height: 24px;
                 margin-bottom: 55px;
+                @media screen and (max-width: $mobileXS) {
+                    font-size: 14px;
+                }
             }
 
             .header__left-btns {
@@ -246,7 +256,6 @@ header {
                     }
                 }
             }
-
         }
 
         @media screen and (max-width: $tablet) {
@@ -254,6 +263,7 @@ header {
             flex-wrap: wrap;
             align-items: center;
             justify-content: center;
+            margin-bottom: 0px;
 
             .header__left {
                 align-items: center;
@@ -263,12 +273,16 @@ header {
                 .header__left-desc {
                     margin-bottom: 24px;
                 }
+                .header__left-about {
+                    margin-bottom: 24px;
+                }
             }
         }
 
 
 
         @media screen and (max-width: $mobileM) {
+            gap: 20px;
             .header__left {
                 display: flex;
                 flex-direction: column;
@@ -276,7 +290,8 @@ header {
                 justify-content: center;
                 width: 100%;
                 h1 {
-                    font-size: 40px;
+                    font-size: 32px;
+                    line-height: 40px;
                     margin-bottom: 0px;
                 }
                 .header__left-desc {
@@ -288,16 +303,95 @@ header {
                 .header__left-btns {
                     .header__left-btns-1 {
                         margin-bottom: 0px;
-
                         svg {
                             width: 100%;
-                            min-height: 48px;
+                            min-height: 48px ; 
                         }
                     }
                     .header__left-btns-a {
                         width: 100%;
                         margin: 0 auto;
                     }
+                }
+                .header__left-about {
+                    margin-bottom: 14px;
+                }
+            }
+        }
+    }
+}
+
+main {
+    .main {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 116px;
+        padding: 0 20px;
+        color: $primary;
+        .main__left {
+            padding-top: 35px;
+            max-width: 454px;
+            .main__left-title {
+                @extend %titleSection;
+                margin-bottom: 19px;
+            }
+            .main__left-desc {
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 24px;
+                color: #05003899;
+                margin-bottom: 39px;
+                @media screen and (max-width: $mobileXS) {
+                    font-size: 14px;
+                }
+            }
+            a {
+                color: $colorBlue;
+                border-bottom: 1px solid $colorBlue;
+                text-decoration: none;
+
+            }
+
+        }
+        .main-right {
+            .main__right-img {
+                img {
+
+                }
+            }
+        }
+        
+        @media screen and (max-width: 1180px) {
+            margin-top: 50px;
+            gap: 2px;
+
+            .main__right {
+                .main__right-img {
+                    img {
+                        max-width: 100%;
+                    }
+                }
+            }
+        }
+        @media screen and (max-width: $tablet) {
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+        }
+        .main__left {
+            text-align: center;
+            margin-top: 0;
+        }
+        @media screen and (max-width: $mobileM){
+            .main__left {
+                .main__left-title {
+                    font-size: 32px;
+                    line-height: 40px;
+                }
+                .main__left-desc {
+                    margin-bottom: 18px;
                 }
             }
         }
