--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-main .main .main__second .main__right-second h2, main .main .main__first .main__left .main__left-title, header .header .header__left h1 {
+main .main .main__forth .main__forth-block h2, main .main .main__third .main__third-block h2, main .main .main__second .main__right-second h2, main .main .main__first .main__left .main__left-title, header .header .header__left h1 {
   font-size: min(48px, max(24px + 2vw));
   letter-spacing: 1px;
   line-height: 56px;
@@ -271,6 +271,8 @@ main .main .main__first .main__left a {
   color: #4262FF;
   border-bottom: 1px solid #4262FF;
   text-decoration: none;
+  font-size: 18px;
+  line-height: 24px;
 }
 main .main .main__first .main__right .main__right-img img {
   max-width: 100%;
@@ -330,6 +332,8 @@ main .main .main__second a {
   color: #4262FF;
   border-bottom: 1px solid #4262FF;
   text-decoration: none;
+  font-size: 18px;
+  line-height: 24px;
 }
 @media screen and (max-width: 1024px) {
   main .main .main__second {
@@ -345,6 +349,189 @@ main .main .main__second a {
   }
   main .main .main__second .main__right-second h2 {
     margin-top: 0;
+  }
+}
+main .main .main__third .main__third-block {
+  margin-top: 120px;
+}
+main .main .main__third .main__third-block h2 {
+  padding-left: 20px;
+}
+@media screen and (max-width: 890px) {
+  main .main .main__third .main__third-block h2 {
+    text-align: center;
+  }
+}
+main .main .main__third .main__third-block .main__third-nav .main__third-nav-menu {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  gap: 24px;
+}
+main .main .main__third .main__third-block .main__third-nav .main__third-nav-menu li {
+  background: #F1F3FD;
+  border: 1px solid #F2F2F2;
+  border-radius: 24px;
+  padding: 13px 18px;
+}
+main .main .main__third .main__third-block .main__third-nav .main__third-nav-menu li a {
+  color: #050038;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+}
+@media screen and (max-width: 1024px) {
+  main .main .main__third .main__third-block .main__third-nav .main__third-nav-menu {
+    gap: 6px;
+    padding-left: 10px;
+  }
+}
+@media screen and (max-width: 890px) {
+  main .main .main__third .main__third-block .main__third-nav .main__third-nav-menu {
+    flex-wrap: wrap;
+  }
+}
+main .main .main__third .main__third-block .main__third-learnmore {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 56px;
+  padding: 0px 20px;
+}
+main .main .main__third .main__third-block .main__third-learnmore .main__third-learnmore-left h6, main .main .main__third .main__third-block .main__third-learnmore .main__third-learnmore-left p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #050038;
+}
+@media screen and (max-width: 320px) {
+  main .main .main__third .main__third-block .main__third-learnmore .main__third-learnmore-left h6, main .main .main__third .main__third-block .main__third-learnmore .main__third-learnmore-left p {
+    font-size: 14px;
+  }
+}
+main .main .main__third .main__third-block .main__third-learnmore .main__third-learnmore-left a {
+  text-decoration: none;
+  color: #4262FF;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+}
+main .main .main__third .main__third-block .main__third-learnmore .main__third-learnmore-right .main__third-learnmore-right-img img {
+  width: 100%;
+}
+@media screen and (max-width: 890px) {
+  main .main .main__third .main__third-block .main__third-learnmore {
+    flex-wrap: wrap;
+  }
+  main .main .main__third .main__third-block .main__third-learnmore .main__third-learnmore-left {
+    text-align: center;
+  }
+  main .main .main__third .main__third-block .main__third-learnmore .main__third-learnmore-right {
+    margin: 0 auto;
+  }
+}
+main .main .main__forth .main__forth-block {
+  margin-top: 120px;
+}
+main .main .main__forth .main__forth-block h2 {
+  padding-left: 20px;
+}
+@media screen and (max-width: 890px) {
+  main .main .main__forth .main__forth-block h2 {
+    text-align: center;
+  }
+}
+main .main .main__forth .main__forth-block .main__forth-nav .main__forth-nav-menu {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  gap: 24px;
+}
+main .main .main__forth .main__forth-block .main__forth-nav .main__forth-nav-menu li {
+  background: #F1F3FD;
+  border: 1px solid #F2F2F2;
+  border-radius: 24px;
+  padding: 13px 18px;
+}
+main .main .main__forth .main__forth-block .main__forth-nav .main__forth-nav-menu li a {
+  color: #050038;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+}
+@media screen and (max-width: 1024px) {
+  main .main .main__forth .main__forth-block .main__forth-nav .main__forth-nav-menu {
+    gap: 6px;
+    padding-left: 10px;
+  }
+}
+@media screen and (max-width: 890px) {
+  main .main .main__forth .main__forth-block .main__forth-nav .main__forth-nav-menu {
+    flex-wrap: wrap;
+  }
+}
+main .main .main__forth .main__forth-block .main__forth-learnmore {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 56px;
+  padding: 0px 20px;
+}
+main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-left {
+  width: 100%;
+}
+main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-left h6, main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-left p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: rgba(5, 0, 56, 0.6);
+  margin: 18px 0px;
+  padding-left: 30px;
+}
+main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-left h6:nth-child(3), main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-left p:nth-child(3) {
+  margin-bottom: 30px;
+}
+@media screen and (max-width: 320px) {
+  main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-left h6, main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-left p {
+    font-size: 14px;
+  }
+}
+main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-left a {
+  display: inline-block;
+  text-decoration: none;
+  color: #4262FF;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  margin-bottom: 72px;
+}
+main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-left #padding-p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: rgba(5, 0, 56, 0.6);
+  margin: 18px 0px;
+  padding-left: 0;
+}
+@media screen and (max-width: 320px) {
+  main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-left #padding-p {
+    font-size: 14px;
+  }
+}
+main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-right .main__forth-learnmore-right-img img {
+  width: 100%;
+}
+@media screen and (max-width: 890px) {
+  main .main .main__forth .main__forth-block .main__forth-learnmore {
+    flex-wrap: wrap;
+  }
+  main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-left {
+    text-align: center;
+  }
+  main .main .main__forth .main__forth-block .main__forth-learnmore .main__forth-learnmore-right {
+    margin: 0 auto;
   }
 }
 
