--- a/css/style.scss
+++ b/css/style.scss
@@ -339,6 +339,8 @@ main {
                     color: $colorBlue;
                     border-bottom: 1px solid $colorBlue;
                     text-decoration: none;
+                    font-size: 18px;
+                    line-height: 24px;
                 }
             }
 
@@ -417,6 +419,8 @@ main {
                 color: $colorBlue;
                 border-bottom: 1px solid $colorBlue;
                 text-decoration: none;
+                font-size: 18px;
+                line-height: 24px;
             }
 
             @media screen and (max-width: $tablet) {
@@ -430,6 +434,207 @@ main {
                     margin-top: 0;
                     h2 {
                         margin-top: 0;
+                    }
+                }
+            }
+        }
+
+        .main__third {
+            .main__third-block {
+                margin-top: 120px;
+                h2 {
+                    @extend %titleSection;
+                    padding-left: 20px;
+
+                    @media screen and (max-width: 890px) {
+                        text-align: center;
+                    }
+                }
+                .main__third-nav {
+                    .main__third-nav-menu {
+                        display: flex;
+                        list-style-type: none;
+                        align-items: center;
+                        gap: 24px;
+                        li {
+                            background: #F1F3FD;
+                            border: 1px solid #F2F2F2;
+                            border-radius: 24px;
+                            padding: 13px 18px;
+                            a {
+                                color: $primary;
+                                text-decoration: none;
+                                font-weight: 400;
+                                font-size: 14px;
+                                line-height: 20px;
+                            }
+                        }
+
+                        @media screen and (max-width: $tablet) {
+                            gap: 6px;
+                            padding-left: 10px;
+                        }
+
+                        @media screen and (max-width: 890px) {
+                            flex-wrap: wrap;
+                        }
+                    }
+                }
+
+                .main__third-learnmore {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    gap: 56px;
+                    padding: 0px 20px;
+                    .main__third-learnmore-left {
+                        h6, p {
+                            font-weight: 400;
+                            font-size: 18px;
+                            line-height: 24px;
+                            color: $primary;
+
+                            @media screen and (max-width: $mobileXS) {
+                                font-size: 14px;
+                            }
+                        }
+
+                        a {
+                            text-decoration: none;
+                            color: $colorBlue;
+                            font-weight: 400;
+                            font-size: 18px;
+                            line-height: 24px;
+                        }
+                    }
+
+                    .main__third-learnmore-right {
+                        .main__third-learnmore-right-img {
+                            img {
+                                width: 100%;
+                            }
+                        }
+                    }
+
+                    @media screen and (max-width: 890px) {
+                        flex-wrap: wrap;
+                        .main__third-learnmore-left {
+                            text-align: center;
+                        }
+                        .main__third-learnmore-right {
+                            margin: 0 auto;
+                        }
+                    }
+                }
+            }
+        }
+
+        .main__forth {
+            .main__forth-block {
+                margin-top: 120px;
+                h2 {
+                    @extend %titleSection;
+                    padding-left: 20px;
+                    @media screen and (max-width: 890px) {
+                        text-align: center;
+                    }
+                }
+                .main__forth-nav {
+                    .main__forth-nav-menu {
+                        display: flex;
+                        list-style-type: none;
+                        align-items: center;
+                        gap: 24px;
+                        li {
+                            background: #F1F3FD;
+                            border: 1px solid #F2F2F2;
+                            border-radius: 24px;
+                            padding: 13px 18px;
+                            a {
+                                color: $primary;
+                                text-decoration: none;
+                                font-weight: 400;
+                                font-size: 14px;
+                                line-height: 20px;
+                            }
+                        }
+
+                        @media screen and (max-width: $tablet) {
+                            gap: 6px;
+                            padding-left: 10px;
+                        }
+
+                        @media screen and (max-width: 890px) {
+                            flex-wrap: wrap;
+                        }
+                    }
+                }
+
+                .main__forth-learnmore {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    gap: 56px;
+                    padding: 0px 20px;
+                    .main__forth-learnmore-left {
+                        width: 100%;
+                        h6, p {
+                            font-weight: 400;
+                            font-size: 18px;
+                            line-height: 24px;
+                            color: #05003899;
+                            margin: 18px 0px;
+                            padding-left: 30px;
+
+                            &:nth-child(3) {
+                                margin-bottom: 30px;
+                            }
+
+                            @media screen and (max-width: $mobileXS) {
+                                font-size: 14px;
+                            }
+                        }
+                        
+                        a {
+                            display: inline-block;
+                            text-decoration: none;
+                            color: $colorBlue;
+                            font-weight: 400;
+                            font-size: 18px;
+                            line-height: 24px;
+                            margin-bottom: 72px;
+                        }
+
+                        #padding-p {
+                            font-weight: 400;
+                            font-size: 18px;
+                            line-height: 24px;
+                            color: #05003899;
+                            margin: 18px 0px;
+                            padding-left: 0;
+
+                            @media screen and (max-width: $mobileXS) {
+                                font-size: 14px;
+                            }
+                        }
+                    }
+
+                    .main__forth-learnmore-right {
+                        .main__forth-learnmore-right-img {
+                            img {
+                                width: 100%;
+                            }
+                        }
+                    }
+
+                    @media screen and (max-width: 890px) {
+                        flex-wrap: wrap;
+                        .main__forth-learnmore-left {
+                            text-align: center;
+                        }
+                        .main__forth-learnmore-right {
+                            margin: 0 auto;
+                        }
                     }
                 }
             }
