--- a/css/style.scss
+++ b/css/style.scss
@@ -484,19 +484,25 @@ main {
                 .main__third-learnmore {
                     display: flex;
                     justify-content: space-between;
-                    align-items: center;
+                    align-items: flex-start;
                     gap: 56px;
                     padding: 0px 20px;
+                    margin-top: 70px;
                     .main__third-learnmore-left {
+                        max-width: 288px;
                         h6, p {
                             font-weight: 400;
                             font-size: 18px;
                             line-height: 24px;
                             color: $primary;
-
+        
                             @media screen and (max-width: $mobileXS) {
                                 font-size: 14px;
                             }
+                        }
+
+                        h6 {
+                            margin: 0px 0px 25px 0px;
                         }
 
                         a {
@@ -518,13 +524,19 @@ main {
 
                     @media screen and (max-width: 890px) {
                         flex-wrap: wrap;
+                        gap: 24px;
                         .main__third-learnmore-left {
                             text-align: center;
+                            margin: 0px auto;
                         }
                         .main__third-learnmore-right {
                             margin: 0 auto;
                         }
                     }
+                }
+
+                @media screen and (max-width: 890px) {
+                    margin-top: 64px;
                 }
             }
         }
@@ -573,11 +585,12 @@ main {
                 .main__forth-learnmore {
                     display: flex;
                     justify-content: space-between;
-                    align-items: center;
+                    align-items: flex-start;
                     gap: 56px;
                     padding: 0px 20px;
+                    margin-top: 70px;
                     .main__forth-learnmore-left {
-                        width: 100%;
+                        
                         h6, p {
                             font-weight: 400;
                             font-size: 18px;
@@ -629,12 +642,198 @@ main {
 
                     @media screen and (max-width: 890px) {
                         flex-wrap: wrap;
+                        gap: 24px;
                         .main__forth-learnmore-left {
                             text-align: center;
+                            margin: 0px auto;
+                            a {
+                                margin-bottom: 24px;
+                            }
                         }
                         .main__forth-learnmore-right {
                             margin: 0 auto;
                         }
+                    }
+                }
+
+                @media screen and (max-width: 890px) {
+                    margin-top: 64px;
+                }
+            }
+        }
+
+        .miro__companies {
+            margin-top: 150px;
+            max-width: 1200px;
+            min-height: 1027px;
+            padding: 120px 32px;
+            background: #FFD02F;
+            h2 {
+                @extend %titleSection;
+                max-width: 525px;
+                margin: 0px auto;
+                text-align: center;
+            }
+
+            a {
+                display: block;
+                width: fit-content;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 24px;
+                text-align: center;
+                color: $primary;
+                text-decoration: none;
+                border-bottom: 1px solid #050038;
+                margin: 18px auto 135px auto;
+            }
+
+            .miro__companies-items {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 32px;
+                .miro__companies-item {
+                    width: 30%;
+                    h5 {
+                        text-align: center;
+                    }
+
+                    p {
+                        font-weight: 400;
+                        font-size: 18px;
+                        line-height: 24px;
+                        text-align: center;
+                        color: $primary;
+                    }
+                }
+
+                .miro__companies-item:nth-child(1) {
+                    margin-bottom: 120px;              
+                }
+
+                @media screen and (max-width: 860px) {
+                    .miro__companies-item {
+                        width: 45%;
+                    }
+                    .miro__companies-item:nth-child(1) {
+                        margin-bottom: 0px;              
+                    }
+                }
+
+                @media screen and (max-width: $mobileM) {
+                    .miro__companies-item {
+                        width: 100%;
+                    }
+                }
+            }
+            @media screen and (max-width: 860px) {
+                margin-top: 64px;
+                padding-top: 64px;
+                padding-bottom: 64px;
+                a {
+                    margin-bottom: 64px;
+                    font-size: 16px;
+                }
+                .miro__companies-items {
+                    
+                }
+            }
+        }
+
+        .like__companies {
+            margin-top: 120px;
+            h2 {
+                @extend %titleSection;
+                margin: 0px auto;
+                text-align: center;
+            }
+
+            .like__companies-about {
+                display: block;
+                width: fit-content;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 24px;
+                text-align: center;
+                color: $colorBlue;
+                text-decoration: none;
+                border: 1px solid $colorBlue;
+                border-radius: 24px;
+                padding: 10px 32px;
+                margin: 24px auto 120px auto;
+            }
+
+            .like__companies-items {
+                display: flex;
+                gap: 60px;
+                .like__companies-item {
+                    display: flex;
+                    flex-direction: column;
+                    width: 30%;
+                    padding: 16px;
+                    .like__companies-item-icon {
+                       margin-bottom: 24px;
+                    }
+
+                    p {
+                        color: rgba(5, 0, 56, 0.6);
+                        font-weight: 400;
+                        font-size: 18px;
+                        line-height: 24px;
+                        flex: 1 1 auto;
+                    }
+
+                    .like__companies-item-person {
+                        display: flex;
+                        align-items: center;
+                        gap: 16px;
+                        .like__companies-item-person-about {
+                            p {
+                                font-weight: 400;
+                                font-size: 14px;
+                                line-height: 20px;
+                                color: rgba(5, 0, 56, 0.6);
+                            }
+                        }
+                    }
+                }
+            }
+
+            @media screen and (max-width: $tablet) {
+                .like__companies-items {
+                    flex-wrap: wrap;
+                    .like__companies-item {
+                        width: 45%;
+                        align-items: center;
+                        justify-content: center;
+                        text-align: center;
+                        .like__companies-item-icon {
+                            padding-left: 90px;
+                        }
+                    }
+
+                    .like__companies-item:nth-child(3) {
+                        margin: 0px auto;
+                        .like__companies-item-icon {
+                            padding-left: 200px;
+                        }
+                    }
+                }
+            }
+
+
+            @media screen and (max-width: 890px) {
+                margin-top: 64px;
+                .like__companies-about {
+                    margin-bottom: 64px;
+                }
+            }
+
+            @media screen and (max-width: $mobileL) {
+                .like__companies-items {
+                    gap: 24px;
+                    .like__companies-item {
+                        width: 100%;
                     }
                 }
             }
