--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-main .main .like__companies h2, main .main .miro__companies h2, main .main .main__forth .main__forth-block h2, main .main .main__third .main__third-block h2, main .main .main__second .main__right-second h2, main .main .main__first .main__left .main__left-title, header .header .header__left h1 {
+main .main .sign__up__user .sign__up__user-items h2, main .main .like__companies h2, main .main .miro__companies h2, main .main .main__forth .main__forth-block h2, main .main .main__third .main__third-block h2, main .main .main__second .main__right-second h2, main .main .main__first .main__left .main__left-title, header .header .header__left h1 {
   font-size: min(48px, max(24px + 2vw));
   letter-spacing: 1px;
   line-height: 56px;
@@ -83,7 +83,7 @@ nav .nav .nav__items-2 .nav__btns .burger__menu {
     gap: 44px;
   }
   nav .nav .nav__items-2 .nav__btns .nav__btns-icon {
-    padding-left: 30px;
+    padding-left: 20px;
   }
   nav .nav .nav__items-2 .nav__btns button {
     background: transparent;
@@ -366,7 +366,7 @@ main .main .main__third .main__third-block .main__third-nav .main__third-nav-men
   display: flex;
   list-style-type: none;
   align-items: center;
-  gap: 24px;
+  gap: 12px;
 }
 main .main .main__third .main__third-block .main__third-nav .main__third-nav-menu li {
   background: #F1F3FD;
@@ -460,7 +460,7 @@ main .main .main__forth .main__forth-block .main__forth-nav .main__forth-nav-men
   display: flex;
   list-style-type: none;
   align-items: center;
-  gap: 24px;
+  gap: 12px;
 }
 main .main .main__forth .main__forth-block .main__forth-nav .main__forth-nav-menu li {
   background: #F1F3FD;
@@ -628,6 +628,7 @@ main .main .miro__companies .miro__companies-items .miro__companies-item:nth-chi
 }
 main .main .like__companies {
   margin-top: 120px;
+  margin-bottom: 120px;
 }
 main .main .like__companies h2 {
   margin: 0px auto;
@@ -650,70 +651,102 @@ main .main .like__companies .like__companies-about {
 }
 main .main .like__companies .like__companies-items {
   display: flex;
+  align-items: flex-start;
+  justify-content: center;
   gap: 60px;
 }
 main .main .like__companies .like__companies-items .like__companies-item {
   display: flex;
   flex-direction: column;
   width: 30%;
-  padding: 16px;
+  align-items: center;
+  justify-content: center;
 }
 main .main .like__companies .like__companies-items .like__companies-item .like__companies-item-icon {
-  margin-bottom: 24px;
+  min-height: 60px;
 }
 main .main .like__companies .like__companies-items .like__companies-item p {
-  color: rgba(5, 0, 56, 0.6);
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  line-height: 24px;
+  color: rgba(5, 0, 56, 0.6);
+  margin: 23px 0px 62px 0px;
   flex: 1 1 auto;
 }
 main .main .like__companies .like__companies-items .like__companies-item .like__companies-item-person {
   display: flex;
-  align-items: center;
   gap: 16px;
+  align-items: center;
 }
 main .main .like__companies .like__companies-items .like__companies-item .like__companies-item-person .like__companies-item-person-about p {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
   color: rgba(5, 0, 56, 0.6);
+  margin: 0px;
 }
 @media screen and (max-width: 1024px) {
   main .main .like__companies .like__companies-items {
     flex-wrap: wrap;
   }
   main .main .like__companies .like__companies-items .like__companies-item {
-    width: 45%;
-    align-items: center;
-    justify-content: center;
     text-align: center;
-  }
-  main .main .like__companies .like__companies-items .like__companies-item .like__companies-item-icon {
-    padding-left: 90px;
-  }
-  main .main .like__companies .like__companies-items .like__companies-item:nth-child(3) {
-    margin: 0px auto;
-  }
-  main .main .like__companies .like__companies-items .like__companies-item:nth-child(3) .like__companies-item-icon {
-    padding-left: 200px;
-  }
-}
-@media screen and (max-width: 890px) {
-  main .main .like__companies {
-    margin-top: 64px;
-  }
-  main .main .like__companies .like__companies-about {
-    margin-bottom: 64px;
   }
 }
 @media screen and (max-width: 768px) {
-  main .main .like__companies .like__companies-items {
-    gap: 24px;
-  }
   main .main .like__companies .like__companies-items .like__companies-item {
     width: 100%;
   }
+}
+main .main .sign__up__user .sign__up__user-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 1120px;
+  min-height: 584px;
+  background: #050038;
+  border-radius: 16px;
+  padding: 0px 20px;
+}
+main .main .sign__up__user .sign__up__user-items h2 {
+  color: #ffffff;
+  max-width: 660px;
+  margin-bottom: 18px;
+  text-align: center;
+}
+main .main .sign__up__user .sign__up__user-items p {
+  max-width: 525px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: rgba(255, 255, 255, 0.6);
+  margin: 0px;
+}
+main .main .sign__up__user .sign__up__user-items a {
+  display: block;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+  margin-bottom: 50px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+}
+main .main .sign__up__user .sign__up__user-items button {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
+  color: #FFFFFF;
+  padding: 12px 36px;
+  background: #4262FF;
+  border-radius: 32px;
+  cursor: pointer;
+  border: none;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
