--- a/css/style.scss
+++ b/css/style.scss
@@ -114,7 +114,7 @@ nav {
                 .nav__btns {
                     gap: 44px;
                     .nav__btns-icon {
-                        padding-left: 30px;
+                        padding-left: 20px;
                     }
 
                     button {
@@ -455,7 +455,7 @@ main {
                         display: flex;
                         list-style-type: none;
                         align-items: center;
-                        gap: 24px;
+                        gap: 12px;
                         li {
                             background: #F1F3FD;
                             border: 1px solid #F2F2F2;
@@ -546,7 +546,7 @@ main {
                 margin-top: 120px;
                 h2 {
                     @extend %titleSection;
-                    padding-left: 20px;
+                        padding-left: 20px;
                     @media screen and (max-width: 890px) {
                         text-align: center;
                     }
@@ -556,7 +556,7 @@ main {
                         display: flex;
                         list-style-type: none;
                         align-items: center;
-                        gap: 24px;
+                        gap: 12px;
                         li {
                             background: #F1F3FD;
                             border: 1px solid #F2F2F2;
@@ -742,6 +742,7 @@ main {
 
         .like__companies {
             margin-top: 120px;
+            margin-bottom: 120px;
             h2 {
                 @extend %titleSection;
                 margin: 0px auto;
@@ -765,79 +766,120 @@ main {
 
             .like__companies-items {
                 display: flex;
+                align-items: flex-start;
+                justify-content: center;
                 gap: 60px;
                 .like__companies-item {
                     display: flex;
                     flex-direction: column;
                     width: 30%;
-                    padding: 16px;
+                    align-items: center;
+                    justify-content: center;
                     .like__companies-item-icon {
-                       margin-bottom: 24px;
+                        min-height: 60px;
                     }
-
                     p {
-                        color: rgba(5, 0, 56, 0.6);
                         font-weight: 400;
                         font-size: 18px;
                         line-height: 24px;
+                        line-height: 24px;
+                        color: rgba(5, 0, 56, 0.6);
+                        margin: 23px 0px 62px 0px;
                         flex: 1 1 auto;
                     }
-
+                    
                     .like__companies-item-person {
                         display: flex;
-                        align-items: center;
                         gap: 16px;
+                        align-items: center;
                         .like__companies-item-person-about {
                             p {
                                 font-weight: 400;
                                 font-size: 14px;
                                 line-height: 20px;
                                 color: rgba(5, 0, 56, 0.6);
+                                margin: 0px;
                             }
                         }
                     }
                 }
-            }
 
-            @media screen and (max-width: $tablet) {
-                .like__companies-items {
+                @media screen and (max-width: $tablet) {
                     flex-wrap: wrap;
                     .like__companies-item {
-                        width: 45%;
-                        align-items: center;
-                        justify-content: center;
                         text-align: center;
-                        .like__companies-item-icon {
-                            padding-left: 90px;
-                        }
-                    }
-
-                    .like__companies-item:nth-child(3) {
-                        margin: 0px auto;
-                        .like__companies-item-icon {
-                            padding-left: 200px;
-                        }
                     }
                 }
-            }
 
-
-            @media screen and (max-width: 890px) {
-                margin-top: 64px;
-                .like__companies-about {
-                    margin-bottom: 64px;
-                }
-            }
-
-            @media screen and (max-width: $mobileL) {
-                .like__companies-items {
-                    gap: 24px;
+                @media screen and (max-width: $mobileL)  {
                     .like__companies-item {
                         width: 100%;
                     }
                 }
             }
+
         }
+
+        .sign__up__user {
+            .sign__up__user-items {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                max-width: 1120px;
+                min-height: 584px;
+                background: $primary;
+                border-radius: 16px;
+                padding: 0px 20px;
+                h2 {
+                    @extend %titleSection;
+                    color: #ffffff;
+                    max-width: 660px;
+                    margin-bottom: 18px;
+                    text-align: center;
+
+                    @media screen and (max-width: 520px) {
+                       
+                    }
+                }
+
+                p {
+                    max-width: 525px;
+                    text-align: center;
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 24px;
+                    color: rgba(255, 255, 255, 0.6);
+                    margin: 0px;
+                }
+
+                a {
+                    display: block;
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 24px;
+                    text-align: center;
+                    color: rgba(255, 255, 255, 0.6);
+                    text-decoration: none;
+                    margin-bottom: 50px;
+                    border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+                }
+
+                button {
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 24px;
+                    text-align: center;
+                    color: #FFFFFF;
+                    padding: 12px 36px;
+                    background: $colorBlue;
+                    border-radius: 32px;
+                    cursor: pointer;
+                    border: none;
+                }
+            }
+        }
+
     }
 }
 
